docs/7.52/md/abapraise_exception_class.md
---
title: "RAISE EXCEPTION"
description: |
  Quick Reference(https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapraise_exception_shortref.htm) Syntax RAISE RESUMABLE EXCEPTION  TYPE cx_class  message(https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapraise_exception_message.htm) EXPORTING p
version: "7.52"
category: "error-handling"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapraise_exception_class.htm"
abapFile: "abapraise_exception_class.htm"
keywords: ["select", "delete", "do", "if", "case", "try", "catch", "method", "class", "data", "types", "exception-handling", "abapraise", "exception"]
---

* * *

SAP NetWeaver AS ABAP Release 752, ©Copyright 2017 SAP AG. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap.htm) →  [ABAP - Reference](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_reference.htm) →  [Program Flow Logic](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_flow_logic.htm) →  [Exception Handling](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_exceptions.htm) →  [Class-Based Exceptions](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenexceptions.htm) → 

RAISE EXCEPTION

[Quick Reference](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapraise_exception_shortref.htm)

Syntax

RAISE *\[*RESUMABLE*\]* EXCEPTION
  *{* *{*TYPE cx\_class *\[* [message](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapraise_exception_message.htm)*\]* *\[*EXPORTING p1 = a1 p2 = a2 ...*\]**}*
  *|* oref *}*.

Extras:

[1\. ... RESUMABLE](#!ABAP_ADDITION_1@1@)
[2\. ... EXPORTING p1 = a1 p2 = a2 ...](#!ABAP_ADDITION_2@2@)

Effect

This statement interrupts execution of the current statement block and raises a [class-based exception](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenclass_based_exception_glosry.htm "Glossary Entry"). It can be used at any point in a [processing block](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenprocessing_block_glosry.htm "Glossary Entry"). The statement interrupts the program flow and searches for a [handler](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapcatch_try.htm) as described in [System Response After a Class-Based Exception](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenexceptions_system_response.htm). Depending on the definition of the handler, the context of the exception is closed before or after the handler is executed. Some [cleanup tasks](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapcleanup.htm) may be performed here. During handling, processing can only be resumed again after the statement RAISE EXCEPTION (and without closing the context) if the addition RESUMABLE is specified.

-   If the addition TYPE is specified, an exception of exception class cx\_class is raised and, if necessary, an exception object is created. Every exception class cx\_class visible at this point can be specified after TYPE.
    

-   The addition EXPORTING can be used to assign actual parameters to the input parameters of the instance constructor.

-   The addition [message](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapraise_exception_message.htm) can be used to associate the exception object with a [message](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenmessage_glosry.htm "Glossary Entry").

-   If oref is specified, no new exception object is created when the exception is raised. For oref, an object reference variable must be specified that references an existing exception object. The static type of oref must be an exception class (namely a subclass of CX\_ROOT or the class itself). oref is a [general expression position](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abengeneral_expr_position_glosry.htm "Glossary Entry"). In the existing exception object, the internal attributes that describe the position of the exception and that are read using the method GET\_SOURCE\_POSITION are applied at the position of the statement RAISE. In addition, the attribute IS\_RESUMABLE is set to a new value, depending on how the addition RESUMABLE is used.
    

The statement RAISE EXCEPTION must not be used in a method or function module in whose interface [non-class-based](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenexceptions_non_class.htm) exceptions are declared. Also, this statement does not permit simultaneous use of the statement [CATCHSYSTEM-EXCEPTIONS](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapcatch_sys.htm) for the obsolete handling of [catchable runtime errors](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencatchable_runtime_error_glosry.htm "Glossary Entry") or [RAISE](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapraise_exception.htm) or [MESSAGE RAISING](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapmessage_raising.htm) for raising non-class-based exceptions in function modules and methods in the current processing block.

Notes

-   If the addition TYPE is used, exception objects are only created on demand for performance reasons. This is the case, namely, when a suitable CATCH block or CLEANUP block is specified in a wrapper [TRY](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abaptry.htm) control structure with the addition INTO. In principle, an exception is the same thing as an exception object being generated. A difference in behavior can occur only if a non-handled exception of the instance constructor replaces the original exception when the object is generated. However, this situation should never arise.
    
-   If oref is specified, either an exception object instantiated using [CREATE OBJECT](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapcreate_object.htm) can be used, or an exception that was previously caught during exception handling can be raised again.
    
-   If a caught exception is raised again, note that the exception object does not remain unmodified and that the information about the position of the exception is changed. If the original information is to be propagated to an external handler, a new exception from the same class can be raised. The original exception object is then passed to the parameter PREVIOUS of the constructor of this class. It may be enough to propagate the original exception implicitly (and not raise it again using RAISE). The associated original exception object can then be evaluated in the [CLEANUP](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapcleanup.htm) block, if required
    
-   The exception class after TYPE can be specified only statically. To raise an exception dynamically, the dynamic variant of [CREATE OBJECT](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapcreate_object_explicit.htm) can be used to create an exception object and the object specified using oref.
    
-   If a [procedure](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenprocedure_glosry.htm "Glossary Entry") is exited by raising an exception, the content of the formal parameter for which the [pass by value](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenpass_by_value_glosry.htm "Glossary Entry") is defined is not assigned to the respective actual parameters.
    
-   The addition [THROW](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenconditional_expression_result.htm) in a [conditional expression](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenconditional_expressions.htm) makes it possible to raise a class-based exception in an operand position.
    

Example

Raises an exception cx\_demo in a method.

CLASS cx\_demo DEFINITION INHERITING FROM cx\_static\_check.
ENDCLASS.
CLASS cls DEFINITION.
  PUBLIC SECTION.
    CLASS-METHODS meth RAISING cx\_demo.
ENDCLASS.
CLASS cls IMPLEMENTATION.
  METHOD meth.
    ...
    RAISE EXCEPTION TYPE cx\_demo.
    ...
  ENDMETHOD.
ENDCLASS.
START-OF-SELECTION.
  TRY.
      cls=>meth( ).
    CATCH cx\_demo.
      cl\_demo\_output=>display( 'Catching exception' ).
  ENDTRY.

Example

Raises a caught exception of the class cx\_demo again using the exception object.

CLASS cx\_demo DEFINITION INHERITING FROM cx\_static\_check.
ENDCLASS.
START-OF-SELECTION.
  TRY.
      TRY.
          RAISE EXCEPTION TYPE cx\_demo.
        CATCH cx\_demo INTO DATA(exc).
          cl\_demo\_output=>write( 'Inner CATCH' ).
          RAISE EXCEPTION exc.
      ENDTRY.
    CATCH cx\_demo.
      cl\_demo\_output=>write( 'Outer CATCH' ).
  ENDTRY.
  cl\_demo\_output=>display( ).

Example

Raises an exception using a dynamically created exception object.

DATA exception TYPE seoclass-clsname VALUE 'CX\_SY\_ZERODIVIDE'.
cl\_demo\_input=>request( CHANGING field = exception ).
DATA oref TYPE REF TO cx\_root.
exception = to\_upper( exception ).
TRY.
    CREATE OBJECT oref TYPE (exception).
  CATCH cx\_root INTO DATA(exc).
    cl\_demo\_output=>display( exc->get\_text( ) ).
    RETURN.
ENDTRY.
TRY.
    RAISE EXCEPTION oref.
  CATCH cx\_root INTO exc.
    cl\_demo\_output=>display( exc->get\_text( ) ).
ENDTRY.

Executable Example

[Exceptions, RAISE](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenraise_abexa.htm)

Addition 1

... RESUMABLE

Effect

The addition RESUMABLE raises an exception as a [resumable exception](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenresumable_exception_glosry.htm "Glossary Entry"). When an exception of this type is handled in a [CATCH](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapcatch_try.htm) block, the statement [RESUME](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapresume.htm) can be used to jump back to directly before the raising statement, as long as the context of the exception was not deleted before the exception was handled.

Notes

-   If the statement RESUMABLE is used to raise an exception as a [resumable exception](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenresumable_exception_glosry.htm "Glossary Entry"), the handler has to determine whether processing is resumed after RAISE EXCEPTION, or whether processing for the current context is canceled completely. Both alternatives can occur when an exception is raised. It is important to note that [CLEANUP](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapcleanup.htm) blocks are only executed when the context is deleted.
    
-   When exceptions of the types CX\_STATIC\_CHECK and CX\_DYNAMIC\_CHECK (which are raised as resumable) are propagated, they can become non-resumable if the addition RESUMABLE is not specified in each interface involved for the addition RAISING to declare the exception.
    
-   When exceptions of type CX\_NO\_CHECK are propagated, the resumable attribute is always retained. However, caution should be used when raising exceptions of type CX\_NO\_CHECK as resumable, and it is important to ensure a procedure always displays the required behavior.
    

Example

Raises a resumable exception cx\_demo using the addition RESUMABLE in a method.

CLASS cx\_demo DEFINITION INHERITING FROM cx\_static\_check.
ENDCLASS.
CLASS cls DEFINITION.
  PUBLIC SECTION.
    CLASS-METHODS meth RAISING RESUMABLE(cx\_demo).
ENDCLASS.
CLASS cls IMPLEMENTATION.
  METHOD meth.
    ...
    RAISE RESUMABLE EXCEPTION TYPE cx\_demo.
    cl\_demo\_output=>display( 'Resumed ...' ).
    ...
  ENDMETHOD.
ENDCLASS.
START-OF-SELECTION.
  TRY.
      cls=>meth( ).
    CATCH BEFORE UNWIND cx\_demo.
      RESUME.
  ENDTRY.

Addition 2

... EXPORTING p1 = a1 p2 = a2 ...

Effect

The addition EXPORTING can be used to assign suitable actual parameters to the input parameters of the instance constructor of the exception class. The syntax is the same as for the statement [CREATE OBJECT](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapcreate_object.htm).

Like in regular method calls, [a1](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abengeneral_expr_position_glosry.htm "Glossary Entry"), a2, ... are general expression positions, which means that, alongside data objects, functions and expressions can also be passed as actual parameters. [Special rules](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abentyping_arith_expr.htm) apply in this case.

Note

Only the constants of the exception class that specify a static [exception text](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenexception_text_glosry.htm "Glossary Entry") of the exception class should be passed to the TEXTID input parameters of the instance constructor of the exception class. The addition [MESSAGE](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapraise_exception_message.htm) is used to associate any messages with an exception. This addition cannot be specified with the parameter TEXTID.

Example

A predefined exception is raised explicitly for which an exception text other than the standard exception text is selected and whose placeholder &TOKEN& is filled by passing a value to the attribute with the same name.

TRY.
    ...
    RAISE EXCEPTION TYPE cx\_sy\_dynamic\_osql\_semantics
      EXPORTING textid = cx\_sy\_dynamic\_osql\_semantics=>unknown\_table\_name
                token = 'Test'.
    ...
  CATCH cx\_sy\_dynamic\_osql\_semantics INTO DATA(exc).
    MESSAGE exc->get\_text( ) TYPE 'I'.
ENDTRY.

Continue
[RAISE EXCEPTION - message](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapraise_exception_message.htm)